--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+
+        <color name="colorPrimary">#44c686</color>
+        <color name="colorOnPrimary">#FFFFFF</color>
+        <color name="colorSecondary">#44c686</color>
+        <color name="colorOnSecondary">#FFFFFF</color>
+        <color name="textPrimary">#212121</color>
+
+
 </resources>
