--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,9 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
+
+
     <style name="Base.Theme.AppTareas" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <!-- Primary / OnPrimary -->
+        <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorOnPrimary">@color/colorOnPrimary</item>
+
+
+        <item name="colorSecondary">@color/colorSecondary</item>
+        <item name="colorOnSecondary">@color/colorOnSecondary</item>
+
+
+        <item name="android:textColorPrimary">@color/textPrimary</item>
+
+
+        <item name="android:navigationBarColor">@color/colorPrimary</item>
     </style>
+
 
     <style name="Theme.AppTareas" parent="Base.Theme.AppTareas" />
 </resources>
