--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="categoria_normal">#ffffff</color> <!-- Verde -->
+    <color name="categoria_seleccionada">#44c686</color> <!-- Blanco (fondo), texto negro -->
+    <color name="text_normal">#44c686</color>
+    <color name="text_seleccionado">#FFFFFF</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
