--- a/app/src/main/res/layout/activity_lista_de_tareas.xml
+++ b/app/src/main/res/layout/activity_lista_de_tareas.xml
@@ -71,7 +71,7 @@
 
     <!-- FAB -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabAddNote"
+        android:id="@+id/botonagregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/baseline_add_24"
