--- a/app/src/main/res/drawable/bg_task_title.xml
+++ b/app/src/main/res/drawable/bg_task_title.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <!-- Fondo gris claro -->
-    <solid android:color="#F5F6FA" />
+    <!-- Fondo negro claro -->
+    <solid android:color="#1E1E1E" />
 
     <!-- Bordes redondeados -->
     <corners android:radius="12dp" />
