--- a/app/src/main/res/layout/activity_nueva_tarea.xml
+++ b/app/src/main/res/layout/activity_nueva_tarea.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:background="#101010"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivityNuevaTarea">
@@ -20,11 +21,14 @@
 
         <!-- Back Arrow -->
         <ImageView
+            android:clickable="true"
+            android:focusable="true"
             android:layout_marginTop="36dp"
             android:id="@+id/ivBack"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_gravity="start"
+            android:tint="@color/white"
             android:src="@drawable/baseline_arrow_back_24"
             android:contentDescription="Back" />
 
@@ -37,7 +41,7 @@
             android:text="Crear"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="#000000"
+            android:textColor="@color/white"
             android:layout_marginTop="36dp" />
 
         <TextView
@@ -48,14 +52,16 @@
             android:text="Nueva Tarea"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="#000000" />
+            android:textColor="@color/white" />
 
         <!-- Task Title Input -->
         <EditText
-            android:id="@+id/etTaskTitle"
+            android:id="@+id/txtTarea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Título de Tarea"
+            android:textColorHint="#888888"
+            android:textColor="@color/white"
             android:layout_marginTop="24dp"
             android:padding="16dp"
             android:background="@drawable/bg_task_title" />
@@ -71,6 +77,7 @@
             <ImageView
                 android:layout_width="24dp"
                 android:layout_height="24dp"
+                android:tint="@color/white"
                 android:src="@drawable/outline_calendar_today_24"
                 android:contentDescription="Calendar" />
 
@@ -84,7 +91,7 @@
                 android:text="Seleccionar fecha"
                 android:layout_marginStart="16dp"
                 android:textSize="16sp"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:clickable="true"
                 android:focusable="true" />
         </LinearLayout>
@@ -101,6 +108,7 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/outline_alarm_24"
+                android:tint="@color/white"
                 android:contentDescription="Time" />
 
             <TextView
@@ -113,7 +121,7 @@
                 android:text="Seleccionar hora"
                 android:layout_marginStart="16dp"
                 android:textSize="16sp"
-                android:textColor="#000000"
+                android:textColor="@color/white"
                 android:clickable="true"
                 android:focusable="true" />
         </LinearLayout>
@@ -123,6 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Categoria"
+            android:textColor="@color/white"
             android:layout_marginTop="46dp"
             android:textStyle="bold"
             android:textSize="16sp" />
@@ -140,14 +149,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="DESIGN"
-                android:backgroundTint="#F5F6FA"
+                android:backgroundTint="#1E1E1E"
                 android:textColor="#44c686" />
 
             <Button
                 android:id="@+id/btnFrontend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#F5F6FA"
+                android:backgroundTint="#1E1E1E"
                 android:textColor="#44c686"
                 android:text="FRONTEND"
                 android:layout_marginStart="8dp" />
@@ -156,7 +165,7 @@
                 android:id="@+id/btnBackend"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:backgroundTint="#F5F6FA"
+                android:backgroundTint="#1E1E1E"
                 android:textColor="#44c686"
                 android:text="BACKEND"
                 android:layout_marginStart="8dp" />
@@ -167,14 +176,14 @@
             android:id="@+id/btnMarketing"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:backgroundTint="#F5F6FA"
+            android:backgroundTint="#1E1E1E"
             android:textColor="#44c686"
             android:text="MARKETING"
             android:layout_marginTop="8dp" />
 
         <!-- Create Task Button -->
         <Button
-            android:id="@+id/btnCreateTask"
+            android:id="@+id/btnCrearTarea"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="CREAR TAREA"
