--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="categoria_normal">#ffffff</color> <!-- Verde -->
+    <color name="categoria_normal">#1E1E1E</color> <!-- Verde -->
     <color name="categoria_seleccionada">#44c686</color> <!-- Blanco (fondo), texto negro -->
     <color name="text_normal">#44c686</color>
     <color name="text_seleccionado">#FFFFFF</color>
