--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -157,6 +157,7 @@
         app:cardElevation="4dp">
 
         <LinearLayout
+            android:id="@+id/agregarTarea"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
