--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,9 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.AppTareas" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Forzar fondo negro -->
-        <item name="android:windowBackground">@android:color/black</item>
-        <item name="android:colorBackground">@android:color/black</item>
-        <item name="colorSurface">@android:color/black</item>
+        <!-- Fondo personalizado -->
+        <item name="android:windowBackground">#101010</item>
+        <item name="android:colorBackground">#101010</item>
+        <item name="colorSurface">#101010</item>
     </style>
 </resources>
