--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,11 +7,12 @@
 </style>
 
 <style name="CalendarWeekDay" parent="TextAppearance.MaterialCalendarWidget.WeekDay">
-<item name="android:textColor">#44c686</item>
+    <item name="android:textColor">#CCCCCC</item> <!-- gris claro -->
 </style>
 
 <style name="CalendarDate" parent="TextAppearance.MaterialCalendarWidget.Date">
-<item name="android:textColor">#000000</item> <!-- Texto normal -->
+    <item name="android:textColor">#FFFFFF</item> <!-- blanco -->
 </style>
+
 
 </resources>
