--- a/app/src/main/res/layout/activity_lista_de_tareas.xml
+++ b/app/src/main/res/layout/activity_lista_de_tareas.xml
@@ -19,24 +19,21 @@
         android:layout_marginStart="20dp" />
 
     <!-- Barra de búsqueda -->
-    <EditText
+    <SearchView
         android:id="@+id/searchBar"
         android:layout_width="0dp"
         android:layout_height="48dp"
-        android:hint="Buscar notas"
-        android:paddingStart="48dp"
-        android:paddingEnd="16dp"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#888888"
+        android:queryHint="Buscar notas"
+        android:iconifiedByDefault="false"
         android:background="@drawable/bg_search_bar"
-        android:drawableStart="@drawable/baseline_search_24"
-        android:drawablePadding="12dp"
+        android:theme="@style/SearchViewTextWhite"
         app:layout_constraintTop_toBottomOf="@id/txtTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp" />
+
 
     <!-- RecyclerView -->
 
