--- a/app/src/main/res/layout/item_task_listas.xml
+++ b/app/src/main/res/layout/item_task_listas.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:id="@+id/cardViewContainer"  android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
     android:layout_marginTop="12dp"
@@ -15,7 +15,6 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-        <!-- Ícono -->
         <ImageView
             android:id="@+id/imgIcon"
             android:layout_width="40dp"
@@ -25,7 +24,8 @@
             android:src="@drawable/baseline_menu_book_24"
             app:tint="#44c686" />
 
-        <!-- Texto -->
+
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -62,7 +62,6 @@
 
         </LinearLayout>
 
-        <!-- Checkbox -->
         <CheckBox
             android:id="@+id/chkDone"
             android:layout_width="wrap_content"
@@ -71,6 +70,20 @@
             android:text=""
             android:layout_gravity="center_vertical" />
 
+        <ImageView
+            android:id="@+id/imgDelete"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/baseline_delete_24"
+            android:visibility="gone"
+            android:layout_gravity="center_vertical"
+            android:padding="8dp"
+            app:tint="#FF6B6B"
+            android:background="@drawable/delete_button_background"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="Eliminar tarea"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
