--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,17 +14,17 @@
         <item
             android:id="@+id/nav_calendario"
             android:icon="@drawable/ic_calendar"
-            android:fontFamily="sans-serif-black"
             android:title="@string/calendario"
+            android:fontFamily="sans-serif-black"
             android:contentDescription="@string/calendario_desc"
             android:orderInCategory="2"/>
 
         <item
-            android:id="@+id/nav_configuracion"
-            android:icon="@drawable/ic_settings"
+            android:id="@+id/nav_listas"
+            android:icon="@drawable/ic_listas"
+            android:title="@string/listas"
             android:fontFamily="sans-serif-black"
-            android:title="@string/configuracion"
-            android:contentDescription="@string/configuracion_desc"
+            android:contentDescription="@string/listas_desc"
             android:orderInCategory="3"/>
     </group>
 </menu>
